add Treats/Flavor in Controller and Models

--- a/PierreSweets/Views/Home/Index.cshtml
+++ b/PierreSweets/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
+
 @{
   Layout = "_Layout";
 }
-&nbsp;
-<h1>Welcome to the Pierre's Sweets</h1>
 
+<h1>Welcome to Pierre's Sweets!</h1>
+<p>@Html.ActionLink("See all flavor", "Index", "Flavors")</p> <p>@Html.ActionLink("See all Treats", "Index", "Treats")</p>
+<p>@Html.ActionLink("Create an account", "Index", "Account")</p>
