--- a/PierreSweets/Views/Shared/_Layout.cshtml
+++ b/PierreSweets/Views/Shared/_Layout.cshtml
@@ -17,15 +17,15 @@
 
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
-              <li class="nav-item">
+              <li class="nav-treat">
                 <a class="nav-link active" href="/">Home
                   <span class="visually-hidden"></span>
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-treat">
                   <a class="nav-link" href="~/Treats/Index">Treats</a>
                 </li>
-              <!-- <li class="nav-item">
+              <!-- <li class="nav-treat">
                 <a class="nav-link" href="~/Patrons/Index">Patrons</a>
               </li> -->
             </ul>
